# Simple-Contacts

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-image-upload.yml  docker-image.yml  tests.yml
deploy/: gunicorn.conf.py
simple_contacts/: __init__.py  app_main.py  auth.py  config.py  data_update.py  exports.py  msgraph.py  scheduler.py  settings.py
simple_contacts/utils/: __init__.py
static/: configure.css  configure.js
static/locales/: en-US.json
templates/: configure.html  login.html
tests/: conftest.py  test_app.py  test_config.py  test_data_update.py  test_exports.py  test_msgraph.py  test_scheduler.py  test_settings.py
