[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "simple-contacts"
version = "1.0.0"
description = "Standalone directory integration service – MicroSIP JSON & Yealink XML feeds"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
