[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-contacts"
version = "1.0.0"
description = "Standalone directory integration service – MicroSIP JSON & Yealink XML feeds"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=22.0",
    "requests==2.33.0",
    "cryptography==46.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
