[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-contacts"
version = "1.0.0"
description = "Standalone directory integration service – MicroSIP JSON & Yealink XML feeds"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "requests==2.34.2",
    "cryptography==48.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
